syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "timePb.proto";
import "buyPb.proto";



message ConfirmOrderDeliveryPb {
    string customerId = 1;
    string parentOrderId = 2;
    repeated BuyPb orderList = 3;
    TimePb time = 4;
    IsOrderedPlacedEnum status = 5;
    repeated string data =6;
}



